--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,15 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+
+# eclipse project files
+*.metadata
+*.classpath
+*.project
+*.settings
+
+
 #ClassTest
 
 ClasseTestes.java
+
